--- a/ExtentReportResults.html
+++ b/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-02-10 17:58:56</span>
+					<span class='suite-started-time'>2020-02-11 12:42:34</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 45s+651ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 58s+741ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 45s+651ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 58s+741ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-02-10 17:58:11</span> 
+							<span class='panel-lead suite-started-time'>2020-02-11 12:40:35</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-02-10 17:58:56</span> 
+							<span class='panel-lead suite-ended-time'>2020-02-11 12:42:34</span> 
 						</div> 
 					</div>
 				</div>
@@ -249,19 +249,19 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='c39f24c2-5963-4c44-b9c5-9ed4046e7989'>
+										<li class='collection-item test displayed active pass ' extentid='b8603d9a-7f93-4aca-80cf-04f72ac3b26f'>
 											<div class='test-head'>
-												<span class='test-name'>verifyMoreHighlightAndAttractionLinks_TC_11 </span>
+												<span class='test-name'>bookingSingleRoomWith3Adults_TC_1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-10 17:58:11</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-11 12:40:35</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
-												<div class='test-desc'>verifyMoreHighlightAndAttractionLinks_TC_11</div>
+												<div class='test-desc'>bookingSingleRoomWith3Adults</div>
 												<div class='test-attributes'>
 												</div>
 												<div class='test-steps'>
@@ -276,99 +276,27 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>User clicked on More HighLights & Attraction Links</td>
+																	<td class='timestamp'>12:40:50</td>
+																	<td class='step-details'>Booking details Source & Destination filled successfully for 3 Adults_4nights</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>Home Page Title Verified.</td>
+																	<td class='timestamp'>12:41:23</td>
+																	<td class='step-details'>User select cheaper flight option</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>The Amazon Link is displayed.</td>
+																	<td class='timestamp'>12:42:22</td>
+																	<td class='step-details'>User fills all the 3 passenger details</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>Best Of Middle East Link is displayed.</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>London - Paris and Beyond Link is displayed.</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>London - Paris and Beyond Link is displayed.</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>HightLights and Attraction Links Verified</td>
+																	<td class='timestamp'>12:42:29</td>
+																	<td class='step-details'>Flights & passenger details verified successfully on PaymentPage</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:58:15</td>
-																	<td class='step-details'>Test passed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='c0dc64f9-8b3d-4475-ba66-9ea98581bc7a'>
-											<div class='test-head'>
-												<span class='test-name'>verifyOtherVacationPackages_TC_12 </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-10 17:58:35</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
-												</div>
-												<div class='test-desc'>verifyOtherVacationPackages_TC_12</div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:43</td>
-																	<td class='step-details'>User clicked on Explore Europe Link</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:52</td>
-																	<td class='step-details'>User clicked on particular vacation package</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:52</td>
-																	<td class='step-details'>Verified User is redirected  to the particular vacation packages</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>17:58:52</td>
-																	<td class='step-details'>verifyOtherVacationPackages is displayed & testcase passed successfully.</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:58:52</td>
+																	<td class='timestamp'>12:42:29</td>
 																	<td class='step-details'>Test passed</td>
 																</tr>
 														</tbody>
