--- a/test-output/index.html
+++ b/test-output/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Suite">
-                    <span>2 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.HomePageTestScript" hash-for-method="verifyMoreHighlightAndAttractionLinks_TC_11(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttraction...)">verifyMoreHighlightAndAttractionLinks_TC_11(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttraction...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.HomePageTestScript" hash-for-method="verifyOtherVacationPackages_TC_12(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_1...)">verifyOtherVacationPackages_TC_12(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_1...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)">bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -125,23 +120,15 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.tripmasters.framework.testScript.HomePageTestScript</span>
+              <span class="class-name">com.tripmasters.framework.testScript.BookingPageTestScript</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyMoreHighlightAndAttractionLinks_TC_11(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttraction...)">
-                  </a> <!-- verifyMoreHighlightAndAttractionLinks_TC_11(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttraction...) -->
-                  <span class="method-name">verifyMoreHighlightAndAttractionLinks_TC_11</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method) throws java.lang.Exception)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyOtherVacationPackages_TC_12(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_1...)">
-                  </a> <!-- verifyOtherVacationPackages_TC_12(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_1...) -->
-                  <span class="method-name">verifyOtherVacationPackages_TC_12</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method))</span>
+                  <a name="bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)">
+                  </a> <!-- bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...) -->
+                  <span class="method-name">bookingSingleRoomWith3Adults_TC_1</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_TC_1(java.lang.reflect.Method) throws java.lang.Exception)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -169,6 +156,7 @@
     &lt;/groups&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.tripmasters.framework.testScript.HomePageTestScript&quot;/&gt;
+      &lt;class name=&quot;com.tripmasters.framework.testScript.BookingPageTestScript&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -182,7 +170,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -193,18 +181,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">regression</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">verifyOtherVacationPackages_TC_12</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">verifyMoreHighlightAndAttractionLinks_TC_11</span>
+                <span class="method-in-group-name">bookingSingleRoomWith3Adults_TC_1</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -224,20 +204,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyOtherVacationPackages_TC_12')
-data.setCell(0, 2, 'com.tripmasters.framework.testScript.HomePageTestScript')
-data.setCell(0, 3, 17384);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyMoreHighlightAndAttractionLinks_TC_11')
-data.setCell(1, 2, 'com.tripmasters.framework.testScript.HomePageTestScript')
-data.setCell(1, 3, 4534);
+data.setCell(0, 1, 'bookingSingleRoomWith3Adults_TC_1')
+data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
+data.setCell(0, 3, 114173);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -263,30 +239,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tripmasters.framework.testScript.HomePageTestScript</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.tripmasters.framework.testScript.BookingPageTestScript</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyMoreHighlightAndAttractionLinks_TC_11(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttraction...)</span>
-                <span class="method-start">17426 ms</span>
+                <span class="method-name">bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)</span>
+                <span class="method-start">17870 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">21961 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">26283 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyOtherVacationPackages_TC_12(public void com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_1...)</span>
-                <span class="method-start">41401 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">58787 ms</span>
+                <span class="method-start">132046 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
