--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,19 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
+<td>bookingSingleRoomWith3Adults_TC_1</td>
 <td>smoke </td>
 </tr>
 <tr>
