--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]<br/></td></tr>
-<tr><td>smoke</td><td>HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>BookingPageTestScript.bookingSingleRoomWith3Adults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]<br/></td></tr>
 </table>
