--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ec378">  <td>20/02/10 17:57:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1947628528</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>20/02/10 17:58:19</td>   <td>26283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1947628528</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>20/02/10 17:58:15</td>   <td>21961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1947628528</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>20/02/10 17:58:52</td>   <td>58787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1947628528</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>20/02/10 17:58:11</td>   <td>17426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">verifyMoreHighlightAndAttractionLinks_TC_11</td> 
-  <td>pool-1-thread-1@900139751</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>20/02/10 17:58:35</td>   <td>41401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.HomePageTestScript@3701eaf6]">verifyOtherVacationPackages_TC_12</td> 
-  <td>pool-1-thread-2@1947628528</td>   <td></td> </tr>
+<tr bgcolor="b9c4b8">  <td>20/02/11 12:40:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWith3Adults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]">bookingSingleRoomWith3Adults_TC_1</td> 
+  <td>pool-1-thread-1@1162227774</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/11 12:40:17</td>   <td>-17869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1162227774</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/11 12:42:29</td>   <td>114176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1162227774</td>   <td></td> </tr>
 </table>
