--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3acfe">  <td>20/02/10 17:51:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/10 17:52:05</td>   <td>16615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyMoreHighlightAndAttractionLinks_TC_11</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/10 17:52:09</td>   <td>21161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/10 17:52:13</td>   <td>25265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/10 17:52:30</td>   <td>41333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyOtherVacationPackages_TC_12</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/10 17:52:49</td>   <td>60873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="71a7d0">  <td>20/02/11 15:50:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6f96c77]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1360657223</td>   <td></td> </tr>
+<tr bgcolor="fcd1a0">  <td>20/02/11 15:50:57</td>   <td>11007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6f96c77]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>main@1360657223</td>   <td></td> </tr>
+<tr bgcolor="71a7d0">  <td>20/02/11 15:57:46</td>   <td>420229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6f96c77]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1360657223</td>   <td></td> </tr>
 </table>
