--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
+<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>removeAddedCity_TC_17</td>
+<td>verifyOtherVacationPackages_TC_12</td>
 <td>regression </td>
 </tr>
 <tr>
