--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>20/02/12 13:16:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@61f8bee4]">removeAddedCity_TC_17</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/12 13:16:33</td>   <td>-14931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/12 13:18:28</td>   <td>100196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>20/02/14 18:54:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2028371466</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>20/02/14 18:54:32</td>   <td>31636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2028371466</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/02/14 18:54:17</td>   <td>17294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:16, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">verifyOtherVacationPackages_TC_12</td> 
+  <td>main@2028371466</td>   <td></td> </tr>
 </table>
