--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,7 +11,32 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyFooterText_TC_16</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPopularVacationPackages_TC_13</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyOtherVacationPackages_TC_12</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCity_TC_10</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyStartAgainLink_TC_15</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
 <td>regression </td>
 </tr>
 <tr>
@@ -42,7 +67,72 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>bookingFlightAndHotelForMultipleCity_TC_8</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpotlightLink_TC_14</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>dateChanging_TC_9</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightAndHotelForSingleCity_TC_7</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingDetailswithPremiumEcomomy_TC_18</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightsWithmultipleCities_TC_6</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeAddedCity_TC_17</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdult_TC_3</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>withoutAirBookingForSingleCity_TC_19</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getWithoutAir_TC_20</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdultTwoChild_TC_5</td>
 <td>smoke </td>
 </tr>
 <tr>
