--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,13 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
-<<<<<<< HEAD
-=======
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>20/02/14 18:54:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2028371466</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>20/02/14 18:54:32</td>   <td>31636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2028371466</td>   <td></td> </tr>
-<tr bgcolor="c7cbad">  <td>20/02/14 18:54:17</td>   <td>17294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:16, instance:com.tripmasters.framework.testScript.HomePageTestScript@6737fd8f]">verifyOtherVacationPackages_TC_12</td> 
-  <td>main@2028371466</td>   <td></td> </tr>
->>>>>>> 47e4303e7c629d9e5f679e9c1e2f36e37a385aab
+<tr bgcolor="bca669">  <td>20/02/19 01:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17_mobile()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7c29daf3]">removeAddedCity_TC_17_mobile</td> 
+  <td>main@1208736537</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/19 01:11:00</td>   <td>-12624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7c29daf3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1208736537</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/19 01:13:28</td>   <td>135232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7c29daf3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1208736537</td>   <td></td> </tr>
 </table>
